base/jitsi/jicofo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jitsi
  labels:
    k8s-app: jicofo
  name: jicofo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      k8s-app: jicofo
  template:
    metadata:
      labels:
        k8s-app: jicofo
    spec:
      containers:
        - name: jicofo
          resources:
            limits:
              memory: 400Mi
              cpu: 400m
            requests:
              memory: 400Mi
              cpu: 400m
          image: jitsi/jicofo:stable-4548-1
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /about/health
              port: 8888
