base/jitsi/prosody-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jitsi
  labels:
    k8s-app: prosody
  name: prosody
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      k8s-app: prosody
  template:
    metadata:
      labels:
        k8s-app: prosody
    spec:
      containers:
        - name: prosody
          resources:
            limits:
              memory: 300Mi
              cpu: 300m
            requests:
              memory: 300Mi
              cpu: 300m
          image: jitsi/prosody:stable-4548-1
          imagePullPolicy: Always
          readinessProbe:
            exec:              
              command:
                - prosodyctl
                - --config
                - /config/prosody.cfg.lua
                - status
