base/jitsi/prosody-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: jitsi
  labels:
    service: prosody
  name: prosody
spec:
  ports:
  - name: "5222"
    port: 5222
    targetPort: 5222
  - name: "5280"
    port: 5280
    targetPort: 5280
  - name: "5347"
    port: 5347
    targetPort: 5347
  selector:
    k8s-app: prosody
    shard: 0
