base/jitsi/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: jitsi
  labels:
    service: web
  name: web
spec:
  ports:
  - name: "https"
    port: 443
    targetPort: 443
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    k8s-app: web
  type: ClusterIP
