base/jitsi/jitsi-ingress-haproxy.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jitsi-haproxy-ingress
  namespace: jitsi
  annotations: 
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: web
            servicePort: 80
